--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -90,9 +90,9 @@ mybatis:
 #指定日志文件储存位置
 logging:
   file:
-    path: C:/mylogs
+    path: /mylogs
 server:
-  port: 80
+  port: 8080
   servlet:
     encoding:
       charset: utf-8
